# oplanet

./: .gitignore  LICENSE  README.md  examples.ipynb  exoplanet_eu_sample.csv  exoplanet_eu_sample_with_aliases.csv  inversions.ipynb  lhs1140.csv  planet_name2_aliases_map.json  pyproject.toml  repeat_alias_search.py  requirements.txt  test.ipynb
.ipynb_checkpoints/: examples-checkpoint.ipynb  inversions-checkpoint.ipynb
oplanet/: __init__.py  alias_searcher.py  data_loaders.py  dataloader.py  einversion.py  esystem.py  nsystem.py  oconfig.py  osystem.py  sfilter.py  star_utils.py  utils.py
oplanet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
oplanet/evolutionary_models/: atmo_2020_grid.csv  linder_2019_grid.csv  sonora_2021_grid.csv
